; ModuleID = '/home/carl/AnghaBench/linux/drivers/opp/extr_ti-opp-supply.c__free_optimized_voltages.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/opp/extr_ti-opp-supply.c__free_optimized_voltages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.ti_opp_supply_data = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, %struct.ti_opp_supply_data*)* @_free_optimized_voltages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_free_optimized_voltages(%struct.device* %0, %struct.ti_opp_supply_data* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.ti_opp_supply_data*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store %struct.ti_opp_supply_data* %1, %struct.ti_opp_supply_data** %4, align 8
  %5 = load %struct.ti_opp_supply_data*, %struct.ti_opp_supply_data** %4, align 8
  %6 = getelementptr inbounds %struct.ti_opp_supply_data, %struct.ti_opp_supply_data* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = call i32 @kfree(i32* %7)
  %9 = load %struct.ti_opp_supply_data*, %struct.ti_opp_supply_data** %4, align 8
  %10 = getelementptr inbounds %struct.ti_opp_supply_data, %struct.ti_opp_supply_data* %9, i32 0, i32 1
  store i32* null, i32** %10, align 8
  %11 = load %struct.ti_opp_supply_data*, %struct.ti_opp_supply_data** %4, align 8
  %12 = getelementptr inbounds %struct.ti_opp_supply_data, %struct.ti_opp_supply_data* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
